--- a/FrontEnd/src/styles/GameEnded.css
+++ b/FrontEnd/src/styles/GameEnded.css
@@ -6,6 +6,8 @@
   height: 800px;
   background-color: green;
   display: flex;
+  flex-direction: column;
+  padding-top: 50px;
   justify-content: center;
   align-items: center;
   color: white;
