--- a/FrontEnd/src/styles/Looser.css
+++ b/FrontEnd/src/styles/Looser.css
@@ -4,7 +4,19 @@
   grid-template-areas: "layer";
   place-items: center;
   animation: rotate 1s linear infinite;
-}  
+  position: relative;
+}
+
+.info_looser {
+  position: absolute;
+  color: rgb(27, 27, 27);;
+  position: absolute;
+  top: 22%;
+  left: 40%;
+  z-index: 2;
+  font-weight: 700;
+  font-size: 51px;
+}
 
 .point_looser {
   position: relative;
@@ -14,7 +26,7 @@
   color: white;
   border-radius: 50%;
 
-  --radius: 4.2vmin;
+  --radius: 72px;
 
   --d: calc(var(--i) / 6);
 
