added menu mode to modal

--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -3,3 +3,12 @@ body {
   padding: 0;
   font-family: 'Saira', sans-serif;
 }
+
+.menu_info_text {
+  color: white;
+  position: absolute;
+  z-index: 2;
+  text-align: center;
+  width: 100%;
+  bottom: 8%;
+}
