--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Saira', sans-serif;
+  font-family: "Saira", sans-serif;
 }
 
 .menu_info_text {
@@ -11,4 +11,40 @@ body {
   text-align: center;
   width: 100%;
   bottom: 8%;
+}
+
+button {
+  border: none;
+  width: 180px;
+  height: 50px;
+  margin: 30px auto;
+  color: #f9f9f9;
+  border-radius: 4px;
+  background-color: #79b0af;
+  border-bottom: solid 4px #69a09f;
+  border-right: solid 4px #69a09f;
+  font-size: 18px;
+  box-shadow: -1px -1px 0px rgba(255, 255, 255, 0.1) inset;
+  -moz-transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+button:hover {
+  border-bottom: solid 3px #69a09f;
+  border-right: solid 3px #69a09f;
+  border-left: solid 1px #f8f2f3;
+  border-top: solid 1px #f8f2f3;
+}
+
+input {
+  padding: 15px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  margin-bottom: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  font-family: montserrat;
+  color: #2c3e50;
+  font-size: 13px;
 }
