--- a/FrontEnd/src/styles/App.css
+++ b/FrontEnd/src/styles/App.css
@@ -8,7 +8,7 @@
   min-width: 100vw;
   overflow: hidden;
 
-  background: rgb(27, 27, 27);
+  background: -webkit-linear-gradient(top, #152c3e, #37618a);
   color: white;
 }
 
