--- a/FrontEnd/src/styles/GameEnded.css
+++ b/FrontEnd/src/styles/GameEnded.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 800px;
   height: 800px;
-  background-color: green;
+  background-color:goldenrod;
   display: flex;
   flex-direction: column;
   padding-top: 50px;
@@ -12,6 +12,5 @@
   align-items: center;
   color: white;
   border-radius: 50%;
-
   font-size: 32px;
 }
