--- a/FrontEnd/src/styles/Gamestart.css
+++ b/FrontEnd/src/styles/Gamestart.css
@@ -26,7 +26,10 @@
   position: absolute;
   box-sizing: border-box;
   background: #150c21;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  width: 500px;
+  height: 500px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -34,10 +37,11 @@
   border-radius: 50%;
 
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .formWrapper {
-  padding: 100px;
   box-sizing: border-box;
 }
 
