--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -22,7 +22,7 @@ button {
   border-radius: 4px;
   background-color: white;
   border-bottom: solid 4px #69a09f;
-  border-right: solid 4px #69a09f;
+  border-left: solid 4px #69a09f;
   font-size: 18px;
   font-weight: bold;
   box-shadow: -1px -1px 0px rgba(255, 255, 255, 0.1) inset;
@@ -34,8 +34,8 @@ button {
 
 button:hover {
   border-bottom: solid 3px #69a09f;
-  border-right: solid 3px #69a09f;
-  border-left: solid 1px #f8f2f3;
+  border-left: solid 3px #69a09f;
+  border-right: solid 1px #f8f2f3;
   border-top: solid 1px #f8f2f3;
 }
 
