--- a/FrontEnd/src/styles/App.css
+++ b/FrontEnd/src/styles/App.css
@@ -24,9 +24,12 @@
   --radius: 80px;
   width: calc(2 * var(--radius));
   height: calc(2 * var(--radius));
-  background-color: gray;
+ /*  background-color: gray; */
+
+  background: radial-gradient(circle at 20% 70%, var(--c1), var(--c2));
   border-radius: 50%;
   position: relative !important;
+  border: 2px solid green;
 }
 
 .point_1 {
