--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -4,7 +4,7 @@ body {
   font-family: "Saira", sans-serif;
 }
 
-.menu_info_text {
+.menu_info_container{
   color: white;
   position: absolute;
   z-index: 2;
@@ -12,6 +12,7 @@ body {
   width: 100%;
   bottom: 8%;
 }
+
 
 button {
   border: none;
