--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -1,9 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Saira", sans-serif;
-}
-
 :root {
   --color_main: #150c21;
   --purple_light: #974859;
@@ -14,4 +8,29 @@ body {
   --blue_dark: #2fa7c2;
   --light_grey: #c4ba7c;
   --yellow: #f9f871;
+  --white: #fff;
+
+  --circle-border: 3px solid #fff;
+  --top-bar: linear-gradient(to right, #4cd964, #5ac8fa, #007aff, #34aadc, #5856d6, #ff2d55);
+  --default-border-radius: 9px;  
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Saira", sans-serif;
+  font-size: 100%;
+}
+
+.app {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  height: 100vh;
+  min-height: 100vh;
+  width: 100vw;
+  min-width: 100vw;
+  overflow: hidden;
+  background: var(--color_main);
+  color: var(--white);
 }
