--- a/FrontEnd/src/styles/Modal.css
+++ b/FrontEnd/src/styles/Modal.css
@@ -4,9 +4,9 @@
 }
 
 .modal__menu__topbar {
-  background: linear-gradient( to right, #4cd964, #5ac8fa, #007aff, #34aadc, #5856d6, #ff2d55 );
+  background: var(--top-bar);
   margin-top: -1px;
-  height: 8px;
+  height: 0.8rem;
   width: 100%;
   box-sizing: border-box;
   border-top-right-radius: 4px;
@@ -14,7 +14,7 @@
 }
 
 .modal_content {
-  padding: 20px;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,7 +29,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 25px;
+  padding-bottom: 2.5rem;
 }
 
 .modal__menu__newGame form {
@@ -38,13 +38,13 @@
   align-items: center;
 }
 
-#username {
+/* #username {
   line-height: 2;
-  padding: 15px;
+  padding: 1.5rem;
   border: 1px solid #ccc;
-  border-radius: 9px;
-  margin-bottom: 10px;
-  width: 180px;
+  border-radius: var(--default-border-radius);
+  margin-bottom: 1rem;
+  width: 18rem;
   box-sizing: border-box;
   color: #150c21;
   font-size: 15px;
@@ -55,19 +55,19 @@
   line-height: 2;
   color: #150c21;
   font-weight: bold;
-}
+} */
 
 .modal__menu__dismiss {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   box-sizing: border-box;
   width: 100%;
   display: flex;
 }
 
 .modal__menu__copy {
-  margin-top: 10px;
-  padding-bottom: 10px;
+  margin-top: 1rem;
+  padding-bottom: 1rem;
   box-sizing: border-box;
   width: 100%;
   display: flex;
@@ -77,12 +77,3 @@
 .warn {
   color: red;
 }
-/* linear-gradient(
-    to right,
-    #4cd964,
-    #5ac8fa,
-    #007aff,
-    #34aadc,
-    #5856d6,
-    #ff2d55
-  ); */
