--- a/FrontEnd/src/styles/Winner.css
+++ b/FrontEnd/src/styles/Winner.css
@@ -11,14 +11,14 @@
   top: 25%;
   left: 32%;
   z-index: 2;
-  font-size: 54px;
+  font-size: 5.4rem;
 }
 
 .point_winner {
   position: relative;
   grid-area: layer;
-  width: 12px;
-  height: 12px;
+  width: 1.2rem;
+  height: 1.2rem;
 
   border-radius: 50%;
 
