--- a/FrontEnd/src/styles/Game.css
+++ b/FrontEnd/src/styles/Game.css
@@ -15,7 +15,7 @@
 }
 
 .cursor {
-  --radius: 8rem;
+  --radius: clamp(3rem, 15vw,8rem);
   width: calc(2 * var(--radius));
   height: calc(2 * var(--radius));
   border-radius: 50%;
