--- a/FrontEnd/src/styles/Modal.css
+++ b/FrontEnd/src/styles/Modal.css
@@ -1,6 +1,7 @@
 .ReactModal__Content {
   padding: 0px !important;
   margin: -1px;
+  z-index: 20;
 }
 
 .modal__menu__topbar {
@@ -38,7 +39,7 @@
   align-items: center;
 }
 
-/* #username {
+#username {
   line-height: 2;
   padding: 1.5rem;
   border: 1px solid #ccc;
@@ -55,7 +56,7 @@
   line-height: 2;
   color: #150c21;
   font-weight: bold;
-} */
+}
 
 .modal__menu__dismiss {
   margin-top: 1rem;
