--- a/FrontEnd/src/styles/Font.css
+++ b/FrontEnd/src/styles/Font.css
@@ -15,10 +15,12 @@ h2 {
   text-align: center;
 }
 
-h3 {
-  
-  font-size: clamp(1rem, 2.5vw, 1.5rem);
- 
+h3 {  
+  font-size: clamp(1rem, 2.5vw, 1.5rem); 
+}
+
+p {
+  font-size: clamp(0.8rem, 2vw, 1rem); 
 }
 
 .default-button {
