--- a/FrontEnd/src/styles/BackgroundWrapper.css
+++ b/FrontEnd/src/styles/BackgroundWrapper.css
@@ -26,6 +26,13 @@
   box-sizing: border-box;
 }
 
+.formWrapper--mobile form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .formWrapper form {
   margin-top: 3rem;
   box-sizing: border-box;
@@ -38,13 +45,6 @@
 
 .formWrapper form input {
   width: 100% !important;
-}
-
-.formWrapper form button {
-  width: 50% !important;
-  background-color: #705df2 !important;
-  color: var(--white);
-  border: unset !important;
 }
 
 .circle {
@@ -143,4 +143,43 @@
   100% {
     transform: translate3d(0, -100%, 0);
   }
+}
+
+/* MOBIlE */
+.formWrapper form button,
+.formWrapper--mobile form button {
+  width: 50% !important;
+  background-color: #705df2 !important;
+  color: var(--white);
+  border: unset !important;
+}
+
+.formWrapper--mobile form button {
+  width: 100% !important;
+  background-color: #705df2 !important;
+  color: var(--white);
+  border: unset !important;
+  font-size: 1rem;
+}
+
+.formWrapper--mobile h1 {
+  font-size: 50px;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.create__contentWrapper--mobile {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  background: rgba(21, 12, 33, 0.98);
+  padding: 5rem;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
 }
