--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -32,12 +32,14 @@ body {
 }
 
 #root {
+  overflow: hidden;
   position: relative;
   width: 100%;
   height: 100%;
 }
 
 .app {
+  position: relative;
   border: 3px solid red;
   box-sizing: border-box;
   width: 100%;
@@ -100,4 +102,30 @@ Desktop */
   .app {
     border: 3px solid green;
   }
+}
+
+.test {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  background: url(https://images.pexels.com/photos/1030963/pexels-photo-1030963.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500);
+  background-size: cover;
+  border-radius: 5px;
+  box-shadow: 0px 10px 30px -5px rgb(0 0 0 / 30%);
+  will-change: transform;
+  border: 10px solid white;
+  cursor: grab;
+  touch-action: none;
+  user-select: none;
+  -webkit-user-select: none;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  font-size: 22px;
+  padding: 20px;
+  text-align: center;
+  color: #ffffffaa;
 }
