--- a/FrontEnd/src/styles/Game.css
+++ b/FrontEnd/src/styles/Game.css
@@ -8,7 +8,12 @@
 }
 
 .cursor_wrapper {
+  cursor: grab;
   position: absolute;
+  touch-action: none;
+  user-select: none;
+  z-index: 10000;
+
   display: flex;
   flex-direction: column;
   align-items: center;
