--- a/FrontEnd/src/styles/Game.css
+++ b/FrontEnd/src/styles/Game.css
@@ -13,6 +13,7 @@
   touch-action: none;
   user-select: none;
   z-index: 10000;
+  box-sizing: border-box;
 
   display: flex;
   flex-direction: column;
