--- a/FrontEnd/src/styles/Game.css
+++ b/FrontEnd/src/styles/Game.css
@@ -5,6 +5,14 @@
   text-align: center;
   width: 100%;
   bottom: 8%;
+
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 
 .cursor_wrapper {
@@ -75,28 +83,18 @@
 }
 
 .ownPlayer {
-  outline: 3px solid purple;
+  animation: pulse 2s infinite;
 }
 
-@keyframes pulse-ring {
+@keyframes pulse {
   0% {
-    transform: scale(0.33);
+    box-shadow: 0 0 0 0 rgba(112, 93, 242, 0.8);
   }
-  80%,
-  100% {
-    opacity: 0;
-  }
-}
-
-@keyframes pulse-dot {
-  0% {
-    transform: scale(0.8);
-  }
-  50% {
-    transform: scale(1);
+  70% {
+    box-shadow: 0 0 0 2rem rgba(204, 169, 44, 0);
   }
   100% {
-    transform: scale(0.8);
+    box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
   }
 }
 
