--- a/FrontEnd/src/styles/Font.css
+++ b/FrontEnd/src/styles/Font.css
@@ -15,12 +15,14 @@ h2 {
   text-align: center;
 }
 
-h3 {  
-  font-size: clamp(1rem, 2.5vw, 1.5rem); 
+h3 {
+  /*   font-size: clamp(1rem, 2.5vw, 1.5rem);  */
+  font-size: 20px;
 }
 
 p {
-  font-size: clamp(0.8rem, 2vw, 1rem); 
+  /*   font-size: clamp(0.8rem, 2vw, 1rem); */
+  font-size: 15px;
 }
 
 .default-button {
