--- a/FrontEnd/src/styles/GameEnded.css
+++ b/FrontEnd/src/styles/GameEnded.css
@@ -13,4 +13,15 @@
   color: var(--white);
   border-radius: 50%;
   font-size: 3.2rem;
+  text-align: center;
+}
+
+
+/* Ipdas + Mobile*/
+@media only screen and (max-width: 768px) {
+  .gameEnded {
+    width: 45vw;
+    height: 45vw;
+    padding-top: 0rem;
+  }  
 }
