--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -25,6 +25,7 @@ body {
   overscroll-behavior-y: none;
   overscroll-behavior-x: none;
   overflow: hidden;
+  touch-action: none;
 }
 
 body {
@@ -44,6 +45,7 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
+  touch-action: none;
 }
 
 .app {
@@ -53,7 +55,7 @@ body {
   user-select: none;
 
   position: relative;
-  border: 3px solid red;
+ /*  border: 3px solid red; */
   box-sizing: border-box;
   width: 100%;
   height: 100%;
@@ -68,9 +70,9 @@ body {
     font-size: 12.5%;
   }
 
-  .app {
+  /* .app {
     border: 3px solid magenta;
-  }
+  } */
   .Toastify__toast-body div:nth-child(2) {
     font-size: 0.9rem;
   }
