--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -9,6 +9,7 @@
   --light_grey: #c4ba7c;
   --yellow: #f9f871;
   --white: #fff;
+  --purple: #705df2;
 
   --circle-border: 3px solid #fff;
 
@@ -55,7 +56,7 @@ body {
   user-select: none;
 
   position: relative;
- /*  border: 3px solid red; */
+  /*  border: 3px solid red; */
   box-sizing: border-box;
   width: 100%;
   height: 100%;
