--- a/FrontEnd/src/styles/BackgroundWrapper.css
+++ b/FrontEnd/src/styles/BackgroundWrapper.css
@@ -149,14 +149,14 @@
 .formWrapper form button,
 .formWrapper--mobile form button {
   width: 50% !important;
-  background-color: #705df2 !important;
+  background-color: var(--purple) !important;
   color: var(--white);
   border: unset !important;
 }
 
 .formWrapper--mobile form button {
   width: 100% !important;
-  background-color: #705df2 !important;
+  background-color: var(--purple) !important;
   color: var(--white);
   border: unset !important;
   font-size: 1rem;
