--- a/FrontEnd/src/styles/Looser.css
+++ b/FrontEnd/src/styles/Looser.css
@@ -9,11 +9,7 @@
 
 .info_looser {
   position: absolute;
-  color: rgb(27, 27, 27);
-  position: absolute;
-  top: 22%;
-  left: 40%;
-  z-index: 2;
+  color: var(--white);
   font-weight: 700;
   font-size: 5.1rem;
 }
@@ -58,9 +54,6 @@
   }
 
   .info_looser {
-    position: absolute;
-    top: 8%;
-    left: 39%;
     font-size: 2.3rem;
   }
 }
