--- a/FrontEnd/src/styles/Game.css
+++ b/FrontEnd/src/styles/Game.css
@@ -5,14 +5,7 @@
   text-align: center;
   width: 100%;
   bottom: 8%;
-
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Old versions of Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome, Edge, Opera and Firefox */
+  user-select: none;
 }
 
 .cursor_wrapper {
@@ -20,23 +13,18 @@
   position: absolute;
   touch-action: none;
   user-select: none;
-
   transform-origin: bottom left;
   z-index: 1000;
   box-sizing: border-box;
-
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .cursor {
-  /*   --radius: clamp(3rem, 8vw, 6rem); */
-  --radius: 20px;
-  width: 80px;
-  height: 80px;
-  /*   width: calc(2 * var(--radius));
-  height: calc(2 * var(--radius)); */
+  --radius: clamp(3rem, 8vw, 6rem);
+  width: calc(2 * var(--radius));
+  height: calc(2 * var(--radius));
   border-radius: 50%;
   position: relative !important;
   border: var(--circle-border);
@@ -85,6 +73,12 @@
 
 /* Ipdas + Mobile*/
 @media only screen and (max-width: 768px) {
+  .cursor {
+    --radius: 20px !important;
+    width: 80px !important;
+    height: 80px !important;
+  }
+
   .point_1:before,
   .point_2:before {
     height: 10px;
